なんか進んでる 後はがんばれ

--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -107,6 +107,8 @@
     </ClCompile>
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TestObject.cpp" />
+    <ClCompile Include="Gauge.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -187,6 +189,8 @@
     </ClInclude>
     <ClInclude Include="Player.h" />
     <ClInclude Include="TestObject.h" />
+    <ClInclude Include="Gauge.h" />
+    <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
